--- a/task3.html
+++ b/task3.html
@@ -5,6 +5,7 @@
         
         <meta charset="UTF-8">
         <title>Practical Excercise 3 - Part 3</title>
+        <link rel="stylesheet" type="text/css" href="task3.css">
     </head>
 
     <body>
