--- a/task3.html
+++ b/task3.html
@@ -14,7 +14,7 @@
             <button class="right">MENU</button>
             <h1>Part 3 - Javascript Playground</h1>
             <div id="mcount"></div>
-            <div id="posts"></div>
+            <div id="posts"></div>  <!--task 3.2 is based around here-->
             <hr />
             <textarea rows="4" cols="60">Type your text here...</textarea>
             <br />
@@ -22,7 +22,7 @@
                 <input type="number" name="quantity" value="1" /><br />
                 <input type="radio" name="color" value="blue" /> Blue<br />
                 <input type="radio" name="color" value="red" /> Red<br />
-                <button>Post</button>
+                <button id="postButton">Post</button>
             </div>
             <div class="controls left"> 
                 <input type="range" name="visible" min="1" max="10" value="10"/><br />
