Added mods for task 3.4

--- a/task3.html
+++ b/task3.html
@@ -19,7 +19,7 @@
             <textarea rows="4" cols="60">Type your text here...</textarea>
             <br />
             <div class="controls left">
-                <input type="number" name="quantity" value="1" /><br />
+                <input id="numOfPosts" type="number" name="quantity" value="1" /><br />
                 <input type="radio" name="color" value="blue" /> Blue<br />
                 <input type="radio" name="color" value="red" /> Red<br />
                 <button id="postButton">Post</button>
