--- a/task3.html
+++ b/task3.html
@@ -38,7 +38,7 @@
         <div id="menu" class="container" style="display:none;">
             <button class="right">BACK</button>
             <p>&nbsp;</p>
-            <span>Background Color:</span><input type="text">
+            <span>Background Color:</span><input id="backgroundInput" type="text">
         </div>
         <script src="task3.js"></script>
     </body>
