--- a/task3.html
+++ b/task3.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="task3.css">
     </head>
 
-    <body>
+    <body id="test">
         
         <div id="main" class="container">
             <button class="right">MENU</button>
