testing if id to body helps complete task 3-5

--- a/task3.html
+++ b/task3.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="task3.css">
     </head>
 
-    <body id="test">
+    <body>
         
         <div id="main" class="container">
             <button class="right">MENU</button>
@@ -38,7 +38,7 @@
         <div id="menu" class="container" style="display:none;">
             <button class="right">BACK</button>
             <p>&nbsp;</p>
-            <span>Background Color:</span><input id="backgroundInput" type="text">
+            <span>Background Color:</span><input id="backgroundInput" type="text" onchange="changeBodyBackgroundColor()">
         </div>
         <script src="task3.js"></script>
     </body>
